<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".reader.ChapterReader">


    <item
        android:id="@+id/action_page_jump"
        android:icon="@drawable/ic_action_view_as_grid"
        android:title="@string/action_page_jump"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reading_direction"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_reading_direction"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_left_to_right"
                android:icon="@drawable/ic_action_forward"
                android:title="@string/action_left_to_right"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_right_to_left"
                android:icon="@drawable/ic_action_back"
                android:title="@string/action_right_to_left"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_top_to_bottom"
                android:icon="@drawable/ic_action_expand"
                android:title="@string/action_top_to_bottom"
                app:showAsAction="ifRoom" />
        </menu>

    </item>

    <item
        android:id="@+id/action_screen_overflow"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_screen_orientation"
        app:showAsAction="ifRoom">

        <menu>
            <!-- needs RadioGroup -->
            <item
                android:id="@+id/action_lock_portrait"
                android:title="@string/action_lock_portrait" />
            <item
                android:id="@+id/action_lock_landscape"
                android:title="@string/action_lock_landscape" />
        </menu>

    </item>

    <item
        android:id="@+id/action_more_options"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        android:title="@string/action_more_options"
        app:showAsAction="ifRoom">


    </item>
</menu>
