<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_border_white_24dp"
        android:title="@string/action_bookmark"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/action_remove_bookmark"
        android:icon="@drawable/ic_bookmark_border_white_24dp"
        android:title="@string/action_remove_bookmark"
        app:showAsAction="always" /> -->

    <item
        android:id="@+id/action_crop"
        android:icon="@drawable/ic_crop_white_24dp"
        android:title="@string/action_crop"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share_page"
        android:icon="@drawable/ic_link_white_24dp"
        android:title="@string/action_share_page"
        app:showAsAction="always" />
</menu>